--- a/gradle.properties
+++ b/gradle.properties
@@ -9,12 +9,12 @@ org.gradle.warning.mode=all
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
 minecraft_version=1.21.8
-yarn_mappings=1.21+build.9
-loader_version=0.15.11
+yarn_mappings=1.21.8+build.1
+loader_version=0.16.14
 # Mod Properties
-mod_version=1.21-beta1
+mod_version=1.21.8
 maven_group=gaucho-matrero.altoclef
 archives_base_name=altoclef
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.100.7+1.21
+fabric_version=0.130.0+1.21.8
