--- a/settings.gradle
+++ b/settings.gradle
@@ -7,3 +7,7 @@ pluginManagement {
         gradlePluginPortal()
     }
 }
+plugins {
+    id 'fabric-loom' version '1.6.11' apply false
+    id 'com.github.johnrengelman.shadow' version '8.1.1' apply false
+}
