--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
-    id "fabric-loom" version "1.7-SNAPSHOT"
     id "maven-publish"
-    id 'com.github.johnrengelman.shadow' version '8.1.1'
+    id 'fabric-loom'
+    id 'com.github.johnrengelman.shadow'
 }
 
 sourceCompatibility = JavaVersion.VERSION_21
